# whisper-writer

./: .gitignore  README.md  pyproject.toml  run.py
hooks/: hook-webrtcvad.py
src/: input_simulation.py  key_listener.py  logging.conf  main.py  result_thread.py  transcription.py  utils.py
src/ui/: base_window.py  main_window.py  settings_window.py  status_window.py
