[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-writer"
version = "1.0.1"
description = "A small speech-to-text app that uses OpenAI's Whisper model to auto-transcribe microphone recordings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioplayer>=0.6",
    "faster-whisper>=1.0.2",
    "numpy>=1.24",
    "openai>=1.28",
    "pynput>=1.7",
    "PyQt5>=5.15,<5.15.11",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "webrtcvad-wheels>=2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
constraint-dependencies = [
    "pyqt5-qt5==5.15.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
